# swe_agent_jom

./: AGENT.md  README.md  chatbot.ipynb  main.py  pyproject.toml
docs/: structure.md
fixtures/demo_project/: README.md  pyproject.toml
fixtures/demo_project/src/demo_math/: __init__.py  calculator.py
fixtures/demo_project/tests/: test_calculator.py
fixtures/workspaces/calculator_bug/: README.md
fixtures/workspaces/calculator_bug/tests/: test_calculator.py
fixtures/workspaces/config_parser_bug/: README.md
fixtures/workspaces/config_parser_bug/tests/: test_parser.py
fixtures/workspaces/list_filter_bug/: README.md
fixtures/workspaces/list_filter_bug/tests/: test_filters.py
fixtures/workspaces/string_utils_bug/: README.md
prototype/: 0_simple_chatbot.ipynb  1_message_management.ipynb  1_working_message_management.ipynb  2_structured_output.ipynb  3.1_tools_usage_basic.ipynb  3.2_use_multiple_tools.ipynb  3.3_tool_result_to_model.ipynb  3.4_mini_agent_loop.ipynb  3.5_agent_loop_error_handling.ipynb  3_tools_usage.ipynb  4.1_mini_agent_demo.ipynb  4.2_read_only_debug_agent.ipynb  4.3_llm_read_only_debug_agent.ipynb  4.4_llm_read_only_bug_sweep.ipynb  chatbot.ipynb  simple_chatbot.ipynb
src/swe_agent_jom/: __init__.py  main.py
src/swe_agent_jom/config/: settings.py
src/swe_agent_jom/core/: __init__.py  tool_result.py
src/swe_agent_jom/memory/: __init__.py  trajectory.py
src/swe_agent_jom/runtime/: __init__.py  command_runner.py  workspace.py
src/swe_agent_jom/tools/: __init__.py  command_tool.py  file_tool.py  search_tool.py
(+7 files in other folders)
