[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-agent-jom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
swe-agent-jom = "swe_agent_jom.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "notebook>=7.6.0",
]

